// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabeled component tests SwitchLabeled rendering SwitchLabeled renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderWidth": 0,
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#F5A623"
      onValueChange={[Function]}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "marginRight": 10,
          },
        ]
      }
      value={false}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": 0,
            "lineHeight": 22,
            "marginRight": 60,
          },
        ]
      }
    >
      Testing SwitchLabeled
    </Text>
  </View>
</View>
`;

exports[`SwitchLabeled component tests SwitchLabeled rendering SwitchLabeled renders correctly with set value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderWidth": 0,
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#F5A623"
      onValueChange={[Function]}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "marginRight": 10,
          },
        ]
      }
      value={true}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "normal",
            "letterSpacing": 0,
            "lineHeight": 22,
            "marginRight": 60,
          },
        ]
      }
    >
      Testing SwitchLabeled
    </Text>
  </View>
</View>
`;
